Fix text on mobile

--- a/app/styles/text.scss
+++ b/app/styles/text.scss
@@ -62,7 +62,7 @@ h2 {
 
 	font-weight: 600;
 	line-height: 1.2;
-	font-size: 3.875rem;
+	font-size: 60px;
 	letter-spacing: -1px;
 	font-family: "SF Pro Display";
 	transition: color 0.3s;
@@ -90,7 +90,7 @@ h2 {
 		vertical-align: middle;
 	}
 
-	@include media(max-width-550) {
+	@include media(max-width-768) {
 		font-size: 30px;
 		line-height: 1.3;
 
@@ -139,7 +139,6 @@ h4 {
 	font-size: 22px;
 	font-weight: 600;
 	line-height: 1.2;
-	letter-spacing: -1px;
 	font-family: "SF Pro Display";
 	transition: color 0.3s;
 	color: var(--text-color);
@@ -158,8 +157,8 @@ h4 {
 		color: var(--faint-color);
 	}
 
-	@include media(max-width-750) {
-		font-size: 16px;
+	@include media(max-width-768) {
+		font-size: 20px;
 
 		img[inline] {
 			height: 12px;
@@ -195,7 +194,7 @@ h5 {
 
 	@include media(max-width-600) {
 		width: 90%;
-		font-size: 20px;
+		font-size: 24px;
 		margin-bottom: 0px;
 
 		img[inline] {
@@ -253,7 +252,7 @@ h6 {
 		}
 	}
 
-	@include media(max-width-600) {
+	@include media(max-width-768) {
 		width: 100%;
 		font-size: 38px;
 		margin-bottom: 0px;
